hard-gists/422bb33419df91b253d8728fe794f8b4/run.log
=== Docker Run Log for 422bb33419df91b253d8728fe794f8b4 ===
Started at: Mi 29. Okt 14:27:21 CET 2025

[2025-10-29 14:27:22] START: Running container for 422bb33419df91b253d8728fe794f8b4
[2025-10-29 14:27:22] SUCCESS: Container ef0cd39fff1a4db1b40e71756c1209318ae50705652e30ae13928aab5a7838d6 started for 422bb33419df91b253d8728fe794f8b4
=== Container logs for 422bb33419df91b253d8728fe794f8b4 ===
  File "/snippet.py", line 15
    print "開始時刻: " + str(start_time)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 422bb33419df91b253d8728fe794f8b4 ===
[2025-10-29 14:27:24] INFO: Container ef0cd39fff1a4db1b40e71756c1209318ae50705652e30ae13928aab5a7838d6 has stopped
